feat: Add complete multi-destination streaming MVP
✨ New Features:
- Multi-destination streaming to YouTube/X/LinkedIn/Custom RTMP
- Dedicated streaming control interface (streaming.html)
- Real-time destination management and monitoring
- Platform-optimized encoding presets
- DynamoDB integration for persistent storage
- Enhanced backend API with streaming endpoints

🔧 Technical Improvements:
- Node.js 22.x compatibility (AWS Lambda ready until April 2027)
- Extended backend server with multi-destination APIs
- Comprehensive documentation and setup guides
- Production deployment scripts and CloudFormation templates

📋 Working MVP Components:
- ✅ Local development environment fully functional
- ✅ 3 configured YouTube destinations with encrypted stream keys
- ✅ 4 platform-optimized encoding presets
- ✅ Complete streaming control interface
- ✅ Real-time status monitoring and session tracking

🎯 Preserves Original:
- Single HLS player functionality intact on main branch
- AWS Media Services integration unchanged
- Existing dashboard and monitoring features preserved

🧪 Testing Status:
- ✅ Backend API: All endpoints functional (localhost:3000)
- ✅ Frontend: Streaming interface working (localhost:8082)
- ✅ Database: DynamoDB tables with test data
- ✅ Integration: Complete end-to-end functionality verified

Ready for production deployment branch creation.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Multi-language video player with AWS Media Services integration",
   "main": "index.html",
+  "engines": {
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "npx http-server . -p 8080 -c-1",
     "dashboard": "npx http-server . -p 8081 -c-1 -o dashboard.html",
