feat: Complete multi-destination streaming implementation with status persistence
✅ Core Features Implemented:
- Multi-destination streaming web interface with start/stop controls
- Backend Lambda API with DynamoDB integration for destination management
- Real-time status persistence across page refreshes
- CORS-enabled API endpoints for frontend connectivity
- Secure stream key storage in AWS Parameter Store

🔧 Technical Implementation:
- Lambda function with Function URL for serverless API
- DynamoDB tables for destinations, presets, and sessions
- Frontend JavaScript with vanilla implementation (no frameworks)
- Status tracking: ready/streaming states with timestamps
- Error handling and validation throughout the stack

📁 New Files Added:
- backend/lambda-handler.js - Production Lambda function
- scripts/deploy-lambda-api.sh - Lambda deployment automation
- docs/medialive-integration-plan.md - Next phase implementation plan
- docs/medialive-implementation-prompt.md - Tomorrow's implementation guide
- aws/cloudformation/ - Infrastructure templates
- hls-player.html - Standalone HLS player

🔄 Modified Files:
- Frontend JS files updated for production API integration
- Configuration files updated for production deployment
- README.md updated with current architecture

⚠️ Next Phase Required:
- AWS MediaLive integration for actual RTMP streaming
- Current implementation tracks status but doesn't create real streams
- Implementation plan documented for next development session

🧹 Code Cleanup:
- Removed redundant test files and build artifacts
- Updated .gitignore for proper exclusions
- Organized scripts and documentation

This commit represents a fully functional multi-destination streaming interface
with persistent status tracking, ready for MediaLive integration phase.

--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,14 @@ temp-*.json
 dist/
 build/
 
+# Lambda deployment packages
+lambda-deployment.zip
+*.zip
+
+# Test files
+test-*.html
+test-*.json
+
 # Test files
 test-results/
 coverage/
