--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "scripts": {
     "dev": "npx http-server . -p 8080 -c-1",
     "dashboard": "npx http-server . -p 8081 -c-1 -o dashboard.html",
-
     "backend": "node backend/server.js",
     "backend-dev": "nodemon backend/server.js",
     "start": "concurrently \"AWS_PROFILE=lunora-media AWS_SDK_LOAD_CONFIG=1 npm run backend\" \"npm run dashboard\"",
@@ -19,15 +18,15 @@
     "test": "echo 'Tests will be added'"
   },
   "dependencies": {
-    "hls.js": "^1.4.14",
-    "express": "^4.18.2",
+    "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
-    "aws-sdk": "^2.1490.0"
+    "express": "^4.18.2",
+    "hls.js": "^1.4.14"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "http-server": "^14.1.1",
-    "nodemon": "^3.0.1",
-    "concurrently": "^8.2.2"
+    "nodemon": "^3.0.1"
   },
   "keywords": [
     "video-player",
