feat: Implement MediaConnect integration with source management
- Add MediaConnect SDK client and integration functions
- Implement granular RTMP destination control via MediaConnect
- Add comprehensive source management API endpoints
- Replace MediaLive schedule actions with MediaConnect outputs
- Add source CRUD operations with health monitoring
- Update destination start/stop to use MediaConnect flow
- Add MediaConnect status synchronization
- Support unlimited RTMP destinations with fixed cost model
- Maintain backward compatibility with existing HLS streaming

API Endpoints Added:
- GET/POST /api/sources - Source management
- PUT/DELETE /api/sources/{id} - Source updates
- POST /api/sources/{id}/test - Connection testing

Enhanced Endpoints:
- POST /api/destinations/{id}/start - Now uses MediaConnect
- POST /api/destinations/{id}/stop - Granular output removal

Technical Improvements:
- Individual destination lifecycle management
- Real-time RTMP output addition/removal
- No MediaLive channel restarts required
- Fixed monthly cost (~91) for unlimited destinations
- Multi-source support (SRT, RTMP, RTP, UDP)
- Primary/backup URL configuration for failover

--- a/aws/cloudformation/mediaconnect-rtmp-router.yaml
+++ b/aws/cloudformation/mediaconnect-rtmp-router.yaml
@@ -33,31 +33,12 @@ Resources:
       Source:
         Name: !Sub '${ProjectName}-medialive-source'
         Description: 'Source from MediaLive channel'
-        Protocol: 'RTP-FEC'
+        Protocol: 'rtp-fec'
         IngestPort: 5000
         WhitelistCidr: '10.0.0.0/8'  # Allow MediaLive internal traffic
         MaxBitrate: 50000000  # 50 Mbps max
-        MaxLatency: 2000      # 2 second max latency
       
-  # IAM Role for MediaConnect
-  MediaConnectRole:
-    Type: AWS::IAM::Role
-    Properties:
-      RoleName: !Sub '${ProjectName}-${Environment}-mediaconnect-role'
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: mediaconnect.amazonaws.com
-            Action: sts:AssumeRole
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/MediaConnectServiceRolePolicy
-      Tags:
-        - Key: Project
-          Value: !Ref ProjectName
-        - Key: Environment
-          Value: !Ref Environment
+
 
   # Lambda Function for MediaConnect Management
   MediaConnectManagerFunction:
@@ -78,7 +59,7 @@ Resources:
       Code:
         ZipFile: |
           const AWS = require('aws-sdk');
-          const mediaconnect = new AWS.MediaConnect();
+          const mediaconnect = new AWS.MediaConnect({ region: process.env.AWS_REGION });
           
           exports.handler = async (event) => {
               console.log('MediaConnect Manager Event:', JSON.stringify(event, null, 2));
