--- a/aws/cloudformation/multi-medialive-channels-complete.yaml
+++ b/aws/cloudformation/multi-medialive-channels-complete.yaml
@@ -27,6 +27,8 @@ Resources:
     Properties:
       Name: !Sub '${ProjectName}-${Environment}-primary-input'
       Type: 'MEDIACONNECT'
+      RoleArn:
+        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-medialive-role-arn'
       MediaConnectFlows:
         - FlowArn: !Ref MediaConnectFlowArn
 
@@ -35,6 +37,8 @@ Resources:
     Properties:
       Name: !Sub '${ProjectName}-${Environment}-youtube-input'
       Type: 'MEDIACONNECT'
+      RoleArn:
+        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-medialive-role-arn'
       MediaConnectFlows:
         - FlowArn: !Ref MediaConnectFlowArn
 
@@ -43,6 +47,8 @@ Resources:
     Properties:
       Name: !Sub '${ProjectName}-${Environment}-twitch-input'
       Type: 'MEDIACONNECT'
+      RoleArn:
+        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-medialive-role-arn'
       MediaConnectFlows:
         - FlowArn: !Ref MediaConnectFlowArn
 
@@ -51,6 +57,8 @@ Resources:
     Properties:
       Name: !Sub '${ProjectName}-${Environment}-linkedin-input'
       Type: 'MEDIACONNECT'
+      RoleArn:
+        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-medialive-role-arn'
       MediaConnectFlows:
         - FlowArn: !Ref MediaConnectFlowArn
 
@@ -59,6 +67,8 @@ Resources:
     Properties:
       Name: !Sub '${ProjectName}-${Environment}-custom-input'
       Type: 'MEDIACONNECT'
+      RoleArn:
+        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-medialive-role-arn'
       MediaConnectFlows:
         - FlowArn: !Ref MediaConnectFlowArn
 
