--- a/aws/cloudformation/multi-medialive-channels-complete.yaml
+++ b/aws/cloudformation/multi-medialive-channels-complete.yaml
@@ -143,7 +143,7 @@ Resources:
       Destinations:
         - Id: 'youtube-rtmp-destination'
           Settings:
-            Url: 'rtmp://a.rtmp.youtube.com/live2'
+            - Url: 'rtmp://a.rtmp.youtube.com/live2'
       EncoderSettings:
         TimecodeConfig:
           Source: 'EMBEDDED'
@@ -206,7 +206,7 @@ Resources:
       Destinations:
         - Id: 'twitch-rtmp-destination'
           Settings:
-            Url: 'rtmp://live.twitch.tv/live'
+            - Url: 'rtmp://live.twitch.tv/live'
       EncoderSettings:
         TimecodeConfig:
           Source: 'EMBEDDED'
@@ -269,7 +269,7 @@ Resources:
       Destinations:
         - Id: 'linkedin-rtmp-destination'
           Settings:
-            Url: 'rtmp://1-b.rtmp.livepush.io/live'
+            - Url: 'rtmp://1-b.rtmp.livepush.io/live'
       EncoderSettings:
         TimecodeConfig:
           Source: 'EMBEDDED'
@@ -332,7 +332,7 @@ Resources:
       Destinations:
         - Id: 'custom-rtmp-destination'
           Settings:
-            Url: 'rtmp://example.com/live'
+            - Url: 'rtmp://example.com/live'
       EncoderSettings:
         TimecodeConfig:
           Source: 'EMBEDDED'
