fix: Add required StreamName to RTMP destinations
Added StreamName property to all RTMP destination Settings arrays.
This is required by AWS MediaLive for RTMP outputs and was causing
the 'StreamName not specified' deployment errors.

The StreamName will be dynamically updated via API when users
configure their actual stream keys through the UI.

--- a/aws/cloudformation/multi-medialive-channels-complete.yaml
+++ b/aws/cloudformation/multi-medialive-channels-complete.yaml
@@ -144,6 +144,7 @@ Resources:
         - Id: 'youtube-rtmp-destination'
           Settings:
             - Url: 'rtmp://a.rtmp.youtube.com/live2'
+              StreamName: 'youtube-stream-key'
       EncoderSettings:
         TimecodeConfig:
           Source: 'EMBEDDED'
@@ -207,6 +208,7 @@ Resources:
         - Id: 'twitch-rtmp-destination'
           Settings:
             - Url: 'rtmp://live.twitch.tv/live'
+              StreamName: 'twitch-stream-key'
       EncoderSettings:
         TimecodeConfig:
           Source: 'EMBEDDED'
@@ -270,6 +272,7 @@ Resources:
         - Id: 'linkedin-rtmp-destination'
           Settings:
             - Url: 'rtmp://1-b.rtmp.livepush.io/live'
+              StreamName: 'linkedin-stream-key'
       EncoderSettings:
         TimecodeConfig:
           Source: 'EMBEDDED'
@@ -333,6 +336,7 @@ Resources:
         - Id: 'custom-rtmp-destination'
           Settings:
             - Url: 'rtmp://example.com/live'
+              StreamName: 'custom-stream-key'
       EncoderSettings:
         TimecodeConfig:
           Source: 'EMBEDDED'
