fix: Remove OPTIONS from CORS AllowMethods for Lambda Function URL
- OPTIONS is not a valid value for AWS::Lambda::Url CORS AllowMethods
- AWS Lambda Function URLs handle OPTIONS preflight requests automatically
- Updated both CloudFormation template and Lambda handler for consistency
- Based on official AWS CloudFormation documentation research

--- a/aws/cloudformation/dynamic-streaming-foundation.yaml
+++ b/aws/cloudformation/dynamic-streaming-foundation.yaml
@@ -184,7 +184,7 @@ Resources:
               headers: {
                 'Content-Type': 'application/json',
                 'Access-Control-Allow-Origin': '*',
-                'Access-Control-Allow-Methods': 'GET, POST, PUT, DELETE, OPTIONS',
+                'Access-Control-Allow-Methods': 'GET, POST, PUT, DELETE',
                 'Access-Control-Allow-Headers': 'Content-Type'
               },
               body: JSON.stringify({
@@ -220,7 +220,6 @@ Resources:
           - POST
           - PUT
           - DELETE
-          - OPTIONS
         AllowOrigins:
           - '*'
         ExposeHeaders:
