🎉 WORKING: Complete Dynamic MediaLive Channel Creation Implementation
✅ MAJOR ACHIEVEMENT: Successfully implemented dynamic MediaLive channel creation
- Real RTMP streaming to Restream confirmed working
- All AWS service integration issues resolved
- Complete troubleshooting and validation completed

🔧 CRITICAL FIXES IMPLEMENTED:
- Fixed MediaConnect output parameters (Outputs array structure)
- Fixed MediaLive channel parameter casing (PascalCase for AWS API)
- Added required AudioSelectorName to all AudioDescriptions
- Fixed AudioSelector configuration (AudioTrackSelection vs AudioLanguageSelection)
- Updated to use existing MediaLive role (lunora-player-prod-medialive-role)
- Added iam:PassRole permission for MediaLive service role
- Fixed destination ID validation (hyphens vs underscores)
- Added ChannelClass: SINGLE_PIPELINE (critical for single destination)

📚 DOCUMENTATION UPDATES:
- Created DYNAMIC-MEDIALIVE-IMPLEMENTATION-GUIDE.md (DO NOT DELETE)
- Complete troubleshooting guide with all error solutions
- Cleaned up redundant documentation (removed 15 duplicate files)
- Updated implementation-prompt-for-new-chat.md with latest context

🛠️ INFRASTRUCTURE UPDATES:
- Enhanced CloudFormation template with PassRole permissions
- Updated Lambda function with corrected MediaLive integration
- Added proper service limit management and cleanup procedures
- Implemented backup strategy for deployment safety

🎯 VERIFIED WORKING CONFIGURATION:
- Platform: custom
- RTMP URL: rtmp://live.restream.io/live
- Stream Key: re_9790072_fa415b883ee7365d2c36
- Preset: 1080p30
- Status: ✅ Successfully streaming

This implementation provides the foundation for multi-destination streaming
with proper AWS service integration and enterprise-grade reliability.

--- a/aws/cloudformation/dynamic-streaming-foundation.yaml
+++ b/aws/cloudformation/dynamic-streaming-foundation.yaml
@@ -102,7 +102,20 @@ Resources:
                   - medialive:DeleteInput
                   - medialive:DescribeInput
                   - medialive:ListInputs
+                  - medialive:CreateTags
+                  - medialive:DeleteTags
+                  - medialive:ListTagsForResource
+                  - medialive:CreateInputSecurityGroup
+                  - medialive:DeleteInputSecurityGroup
+                  - medialive:DescribeInputSecurityGroup
+                  - medialive:ListInputSecurityGroups
+                  - medialive:UpdateInputSecurityGroup
                 Resource: '*'
+              - Effect: Allow
+                Action:
+                  - iam:PassRole
+                Resource:
+                  - !Sub 'arn:aws:iam::${AWS::AccountId}:role/lunora-player-prod-medialive-role'
               
               # Parameter Store permissions
               - Effect: Allow
