Pre-migration commit: AWS credentials setup and verification scripts
- Added AWS_CREDENTIALS_SETUP.md documentation
- Added verification scripts for AWS credentials and Node.js
- Updated package.json and package-lock.json
- Updated .env.example with AWS configuration

This commit establishes a clean baseline before AWS SDK v2 to v3 migration.

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@
 
 # AWS Configuration
 AWS_REGION=us-west-2
-AWS_PROFILE=default
+AWS_PROFILE=lunora-media
+AWS_SDK_LOAD_CONFIG=1
+AWS_ACCOUNT_ID=372241484305
 
 # Project Configuration
 PROJECT_NAME=lunora-player
