--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "start": "concurrently \"AWS_PROFILE=lunora-media AWS_SDK_LOAD_CONFIG=1 npm run backend\" \"npm run dashboard\"",
     "build": "echo 'Build process for production'",
     "deploy-aws": "bash scripts/deploy-aws.sh",
-    "test": "echo 'Tests will be added'"
+    "test": "echo 'Tests will be added'",
+    "verify-aws": "node scripts/verify-aws-node.js",
+    "verify-aws-cli": "bash scripts/verify-aws-credentials.sh"
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "hls.js": "^1.4.14"
   },
